--- a/main.html
+++ b/main.html
@@ -8,6 +8,10 @@
 
 <body>
 	<!-- the entire body must be written by student -->
+	<h1>Time, Space, and Complexity.</h1>
+	<p>Time complexity is a measure of the amount of time an algorithm takes to run as a function of the length of its input. It quantifies how the execution time of an algorithm grows as the input size increases. This is a crucial concept in computer science for analyzing how efficient the algorithms are.</p>
+	<p><b>Space Complexity</b> refers to the amount of memory an algorithm requires to run to completion, relative to the size of its input. It is typically expressed using Big O notation, which describes the upper bound or worst-case scenario of memory usage as the input size grows.
+An example of Space Complexity is O(n), which denotes linear space complexity..</p>
     <script type="text/javascript" src="./script.js">
 </script>
 
